--- a/README
+++ b/README
@@ -2,7 +2,14 @@ CLAW-TYLDA
 Este programa esta pensado para controlar un brazo/garra robot con el Hub de spike prime, junto con el firmware de pybricks
 
 Características:
-*Cuenta con interfaz de usuario
-*Soporta control por mando de Xbox
-*Permite conectarse e iniciar el programa del servidor a través del cliente
+* Cuenta con interfaz de usuario
+* Soporta control por mando de Xbox
+* Permite conectarse e iniciar el programa del servidor a través del cliente
 
+Requerimientos:
+* Libreria pybricksdev
+* Libreria Tkinter
+* Control original Xbox
+
+Instalacion:
+Para instalar el programa se debe descargar la carpeta ZIP, descomprimirla y abrirla en el IDE deseado, despues se debe ejecutar el programa interfaz.py para iniciar el programa.
